# NEAT-cell

./: .gitignore  GA _cell.py  README.md  cell.py  constants.py  genome.py  main.py  nn.py  nutrient.py  pyproject.toml  requirements.txt  sensor.py
