[tool.poetry]
name = "GA-cell"
version = "0.1.0"
description = "Generation Algorithm - cell battle"
authors = ["lifeadventurer <life0adventurer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
imageio = "^2.34.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"